argo-applications/apps/webserver2/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webserver2
  labels:
    mesh: gumonet
    istio-injection: enabled
