argo-applications/apps/webserver2/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: webserver2
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8081
  selector:
    app: webserver2
