argo-applications/apps/webserver2/base/istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webserver2
spec:
  hosts:
    - api.webserver2.svc.cluster.local
  http:
    - route:
        - destination:
            host: api.webserver2.svc.cluster.local
            subset: v1
